Table produksi_dempuls {
  id bigint
  tanggal date
  kendala varchar
  created_at timestamp
  updated_at timestamp
}

Table rencana_pegawai_dempuls{
  id bigint
  id_produksi_dempul bigint [ref: > produksi_dempuls.id]
  id_pegawai bigint
  jam_masuk time
  jam_pulang time
  ijin varchar
  keterangan varchar
  created_at timestamp
  updated_at timestamp
}

Table bahan_dempuls{
  id bigint
  id_produksi_dempul bigint [ref: > produksi_dempuls.id]
  nama_bahan varchar
  jumlah int
  created_at timestamp
  updated_at timestamp
}


Table detail_dempuls{
  id bigint
  id_produksi_dempul bigint [ref: > produksi_dempuls.id]
  id_barang_setelah_jadi_hp bigint
  modal int
  hasil int
  nomor_palet int
  created_at timestamp
  updated_at timestamp
}

Table detail_dempul_pegawai{
    id bigint
    id_detail_dempul bigint [ref: > detail_dempuls.id]
    id_pegawai bigint
    created_at timestamp
    updated_at timestamp
}

Table validasi_dempuls{
  id bigint
  id_produksi_dempul bigint [ref: > produksi_dempuls.id]
  role varchar
  status varchar
  created_at timestamp
  updated_at timestamp
}

